--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,10 +12,7 @@ body {
 a {
   text-decoration: none;
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+
 .navBar {
   box-shadow: 0px 0px 3px #0004;
 }
@@ -35,6 +32,9 @@ code {
 .navTargit:hover,
 .navTargit.active {
   text-decoration: underline;
+}
+.user {
+  font-size: 20px;
 }
 .eria-title {
   font-family: "Playwrite GB S", cursive;
